# scaf

./: .editorconfig  .gitignore  .gitlab-ci.yml  .mdl.rb  .mdlrc  .vale.ini  .yamllint  README  prettier.config.ts  pyproject.toml
.github/workflows/: CHANGEME.yaml
.vale/config/views/: Python.yml
.vale/config/vocabularies/edcsnt/: accept.txt
